--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nuxt-3-custom-scroll-plugin",
   "version": "0.0.1",
   "description": "Nuxt 3 custom scroll plugin. (document + v-scrollable directive)",
+  "type": "module",
   "main": "dist/index.js",
   "repository": {
     "type": "git",
